Added font to Index

--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -1,3 +1,6 @@
+/* font-family: 'Poppins', sans-serif;
+font-family: 'Muli', sans-serif; */
+
 .results-user-container-skill {
   text-align: left;
 }
