--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -1,27 +1,85 @@
 /* font-family: 'Poppins', sans-serif;
 font-family: 'Muli', sans-serif; */
 
+.results-user-container {
+  padding:  20px;
+}
+
+.results-user-container-type {
+  text-align:   left;
+  padding: 0;
+  margin: 0;
+}
+.results-user-container-type-text {
+  color:         #F77171;
+  font-family:   'Poppins', sans-serif;
+  font-weight:   600;
+  font-size:     30px;
+  margin:0;
+  padding: 0;
+  line-height: 80%;
+}
+
+
 .results-user-container-skill {
   text-align: left;
 }
-.results-user-container-photo {
-
+.results-user-container-skill-text {
+   color: #F77171;
+   font-family: 'Poppins', sans-serif;
+   font-weight: 600;
+   font-size: 18px;
+   margin: 0;
+   padding: 0;
 }
+.results-user-container-photo {
+  display: grid;
+  height: 100%;
+}
+
+.results-user-container-photo-img {
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
+}
+
 .results-user-container-name {
-  text-align: left;
+  text-align: center;
+}
+
+.results-user-container-name-text {
+  font-family: 'Muli', sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  padding-bottom: 0;
+  margin: 0;
 }
 .results-user-container-location {
-  text-align: left;
+  text-align: center;
+}
+.results-user-container-location-text {
+  font-family: 'Muli', sans-serif;
+  font-size: 14px;
+  margin: 0;
 }
 .results-user-container-bio {
   text-align: left;
 }
+.results-user-container-bio-text {
+  font-family: 'Muli', sans-serif;
+  font-size: 14px;
+}
+
+.results-buttons-container {
+  display: flex;
+  justify-content: space-around;
+}
 
 .results-button {
-    border: 5px solid;
+    border: 4px solid;
     display: inline-block;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
     outline:0;
 }
