--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -52,6 +52,7 @@ font-family: 'Muli', sans-serif; */
   margin:0;
   padding: 0;
   line-height: 80%;
+  text-align: left;
 }
 
 
@@ -65,6 +66,7 @@ font-family: 'Muli', sans-serif; */
    font-size: 18px;
    margin: 0;
    padding: 0;
+    text-align: left;
 }
 .results-user-container-photo {
   display: grid;
@@ -87,6 +89,7 @@ font-family: 'Muli', sans-serif; */
   font-weight: 600;
   padding-bottom: 0;
   margin: 0;
+  color: #555555
 }
 .results-user-container-location {
   text-align: center;
@@ -95,6 +98,7 @@ font-family: 'Muli', sans-serif; */
   font-family: 'Muli', sans-serif;
   font-size: 14px;
   margin: 0;
+	color: #555555
 }
 .results-user-container-bio {
   text-align: left;
@@ -102,6 +106,7 @@ font-family: 'Muli', sans-serif; */
 .results-user-container-bio-text {
   font-family: 'Muli', sans-serif;
   font-size: 14px;
+	color: #555555
 }
 
 .results-buttons-container {
