--- a/src/components/HomeDashContainer.css
+++ b/src/components/HomeDashContainer.css
@@ -106,6 +106,50 @@
   padding: 0px;
 }
 
+.button-dash5 {
+  background-color: #555555; /* Green */
+    border: none;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family:   'Poppins', sans-serif;
+    font-weight:   900;
+    font-size:     20px;
+    height: 90px;
+    width: 90px;
+    border-radius: 50%;
+    margin-right: 100%;
+    margin-top: 60%;
+    padding-right: 20px;
+    cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  padding: 0px;
+  -webkit-animation-duration: 30s;
+          animation-duration: 30s;
+          -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+@-webkit-keyframes shake {
+          0%, 100% {-webkit-transform: translateX(0);}
+          10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-60px);}
+          20%, 40%, 60%, 80% {-webkit-transform: translateX(60px);}
+       }
+
+       @keyframes shake {
+          0%, 100% {transform: translateX(0);}
+          10%, 30%, 50%, 70%, 90% {transform: translateX(-60px);}
+          20%, 40%, 60%, 80% {transform: translateX(-60px);}
+       }
+
+       .shake {
+          -webkit-animation-name: shake;
+          animation-name: shake;
+       }
+
+
 .containerbubbles {
   height: 200px;
   width: 200px;
