--- a/src/components/Results.css
+++ b/src/components/Results.css
@@ -142,3 +142,26 @@ font-family: 'Muli', sans-serif; */
   background-color: #FFFFFF;
   border-color: #F77171;
 }
+.animated-no {
+  animation-name: animated-no-animation;
+  animation-duration: 1s;
+  position: relative;
+}
+.animated-yes {
+  animation-name: animated-yes-animation;
+  animation-duration: 1s;
+  position: relative;
+}
+
+@keyframes animated-no-animation {
+  0%   {right:0px; box-shadow: 0px 0px 0px lightgrey;}
+  25%  {right:0px; box-shadow: 5px 5px 20px lightgrey;transform: scale(1.05,1.05)}
+  50%  {right:25%; box-shadow: 5px 5px 20px lightgrey;transform: scale(1.05,1.05)}
+  100% {right:200%; box-shadow: 5px 5px 20px lightgrey; transform: scale(1.05,1.05)}
+  }
+  @keyframes animated-yes-animation {
+    0%   {top:0px; box-shadow: 0px 0px 0px lightgrey;}
+    25%  {top:0px; box-shadow: 5px 5px 20px lightgrey;transform: scale(1.05,1.05)}
+    50%  {top:150px; box-shadow: 5px 5px 20px lightgrey;transform: scale(1.05,1.05)}
+    100% {top:1000px; box-shadow: 5px 5px 20px lightgrey; transform: scale(1.05,1.05)}
+    }
