--- a/src/components/AddSkillContainer.css
+++ b/src/components/AddSkillContainer.css
@@ -141,3 +141,9 @@
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
+.inputskill {
+  width: 300px;
+  height: 28px;
+  border: 1px solid #555555;
+}
